Fixed Dark Mode in Education Tab and Fixed Security Risk in a tag in content

--- a/src/styling/dark-mode.css
+++ b/src/styling/dark-mode.css
@@ -77,7 +77,7 @@ html.dark-mode {
 }
 
 /* education dark-mode setting */
-#EDU-Title h2.dark-mode{
+.EDU-Title.dark-mode h2{
     background-color: rgba(22, 24, 29, 0.9);
     color: #e5e7eb;
 }
